# swarden

./: .dockerignore  .gitignore  404.html  Dockerfile  LICENSE  README.md  docker-compose-dev.yml  docker-compose-load.yml  docker-compose-unittest.yml  docker-compose.yml  index.html  keys.txt  local_1st_run.sh  pyproject.toml  requirements.dev.txt  ruff.toml  sitemap.xml
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  SUPPORT.md  TODO.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  research.yml
.github/db/: _schema.dbml  db_description.md
.github/web/: arch.txt
.github/workflows/: code_analysis.yml  database_doc.yml  django_loadtest.yml  django_soaktest.yml  django_spiketest.yml  django_stresstest.yml  django_unittest.yml  publish_docs.yml  wake_db.yml
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
Codebase/: index.html
Codebase/CORE/admin.py/: index.html
Codebase/CORE/asgi.py/: index.html
Codebase/CORE/settings/base.py/: index.html
Codebase/CORE/settings/deploy.py/: index.html
Codebase/CORE/settings/dev.py/: index.html
Codebase/CORE/urls.py/: index.html
Codebase/CORE/wsgi.py/: index.html
Codebase/account/admin.py/: index.html
Codebase/account/apps.py/: index.html
Codebase/account/forms.py/: index.html
Codebase/account/migrations/0001_initial.py/: index.html
Codebase/account/models.py/: index.html
Codebase/account/tests/test_models.py/: index.html
Codebase/account/tests/test_views.py/: index.html
Codebase/account/urls.py/: index.html
Codebase/account/views.py/: index.html
Codebase/err/apps.py/: index.html
Codebase/err/tests/test_views.py/: index.html
Codebase/err/urls.py/: index.html
Codebase/err/views.py/: index.html
Codebase/general/apps.py/: index.html
Codebase/general/tests/test_views.py/: index.html
Codebase/general/urls.py/: index.html
Codebase/general/views.py/: index.html
Codebase/home/apps.py/: index.html
Codebase/home/tests/test_views.py/: index.html
Codebase/home/urls.py/: index.html
Codebase/home/views.py/: index.html
Codebase/honeypot/admin.py/: index.html
Codebase/honeypot/apps.py/: index.html
Codebase/honeypot/migrations/0001_initial.py/: index.html
Codebase/honeypot/models.py/: index.html
Codebase/honeypot/tests/test_models.py/: index.html
Codebase/honeypot/tests/test_views.py/: index.html
Codebase/honeypot/urls.py/: index.html
Codebase/honeypot/views.py/: index.html
Codebase/mail/apps.py/: index.html
Codebase/mail/migrations/0001_initial.py/: index.html
Codebase/mail/models.py/: index.html
Codebase/mail/tests/test_views.py/: index.html
Codebase/mail/urls.py/: index.html
Codebase/mail/views.py/: index.html
Codebase/manage.py/: index.html
Codebase/secret/admin.py/: index.html
Codebase/secret/apps.py/: index.html
Codebase/secret/migrations/0001_initial.py/: index.html
Codebase/secret/models/__init__.py/: index.html
Codebase/secret/models/card.py/: index.html
Codebase/secret/urls.py/: index.html
Codebase/secret/views.py/: index.html
Codebase/utils.py/: index.html
SECURITY/: index.html
SUPPORT/: index.html
SWARDEN/: crypt.py  manage.py  requirements.txt  utils.py
SWARDEN/CORE/: admin.py  asgi.py  urls.py  wsgi.py
SWARDEN/CORE/settings/: base.py  deploy.py  dev.py  gconfig.py
SWARDEN/account/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
SWARDEN/account/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py
SWARDEN/account/tests/: test_models.py  test_views.py
SWARDEN/err/: apps.py  urls.py  views.py
SWARDEN/err/tests/: test_views.py
SWARDEN/general/: apps.py  urls.py  views.py
SWARDEN/general/tests/: test_views.py
SWARDEN/home/: urls.py  views.py
SWARDEN/home/tests/: test_views.py
SWARDEN/honeypot/: admin.py  apps.py  models.py  urls.py  views.py
SWARDEN/honeypot/migrations/: 0001_initial.py
SWARDEN/honeypot/tests/: test_models.py  test_views.py
SWARDEN/mail/: apps.py  urls.py  views.py
SWARDEN/mail/migrations/: 0001_initial.py
SWARDEN/mail/tests/: test_views.py
SWARDEN/secret/: admin.py  apps.py  choices.py  models.py  urls.py  views.py
SWARDEN/secret/migrations/: 0001_initial.py  0002_alter_card_created_alter_card_updated_and_more.py
SWARDEN/secret/models/: __init__.py  card.py  logincredential.py  securitynotes.py
SWARDEN/secret/month/: __init__.py  models.py  widgets.py
SWARDEN/secret/tests/: sample.txt  test_models.py  test_views.py  test_xor.py
SWARDEN/templates/account/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html
SWARDEN/templates/admin/: index.html
SWARDEN/templates/err/: error_template.html
SWARDEN/templates/general/: index.html
SWARDEN/templates/home/: index.html  landing.html
SWARDEN/templates/honeypot/: honeypot.html  loop.html
SWARDEN/templates/secret/: create_view.html  delete_view.html  index.html  list_view.html
SWARDEN/templates/shared/: base.html
TODO/: index.html
docker/: Dockerfile  docker-compose-dev.yml  docker-compose-load.yml  docker-compose-unittest.yml  docker-compose.yml
docker/caddy/: Caddyfile
docker/nginx/: nginx.conf
docs/: README.md
docs/db/: generate_dbml.py
docs/web/: arch.txt
documentation/: mkdocs.yml  mosheh.json
documentation/docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  TODO.md  index.md  manage.py.md
documentation/docs/CORE/: urls.py.md
documentation/docs/Codebase/: index.md  utils.py.md
documentation/docs/account/: admin.py.md  apps.py.md  forms.py.md  views.py.md
documentation/docs/err/: apps.py.md  urls.py.md
documentation/docs/home/: views.py.md
documentation/docs/honeypot/: admin.py.md  urls.py.md  views.py.md
documentation/docs/mail/: apps.py.md  views.py.md
documentation/docs/secret/: admin.py.md  views.py.md
loadtests/: load_test.py  soak_test.py  spike_test.py  stress_test.py  utils.py
search/: search_index.json
(+206 files in other folders)
