[project]
name = "swarden"
version = "1.0.0"
description = "Created in Django as an MVC Framework, sWarden works as a real prototype of an online password and credential manager. This project uses security concepts in a practical and descriptive way."
readme = { file = ".github/README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "LucasGonc", email = "lucasgoncsilva04@gmail.com" }]
maintainers = [{ name = "LucasGonc", email = "lucasgoncsilva04@gmail.com" }]


requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap4>=2024.10",
    "dj-database-url>=2.3.0",
    "django>=5.2",
    "django-crispy-forms>=2.4",
    "django-monthfield>=0.1.4",
    "django-ranged-response>=0.2.0",
    "django-simple-captcha>=0.6.2",
    "gunicorn>=23.0.0",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "django-extensions>=4.1",
    "locust>=2.36.1",
    "mosheh>=1.3.4",
    "ruff>=0.11.7",
    "tblib>=3.1.0",
    "tqdm>=4.67.1",
]


[project.urls]
Documentation = "https://lucasgoncsilva.github.io/swarden/"
Repository = "https://github.com/lucasGoncSilva/swarden/"
Issues = "https://github.com/LucasGoncSilva/swarden/issues"
Changelog = "https://github.com/LucasGoncSilva/swarden/blob/main/.github/CHANGELOG.md"


[tool.ruff]
exclude = [".env", "migrations", "SWARDEN/secret/month"]
fix = true

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = ["I", "E", "UP", "F"]
fixable = ["ALL"]
exclude = [".env", "migrations", "SWARDEN/secret/month"]

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2

[tool.ruff.lint.pycodestyle]
max-doc-length = 88
