[project]
name = "swarden"
version = "2.0.0"
description = "Created in Django as an MVC Framework, sWarden works as a real prototype of an online password and credential manager. This project uses security concepts in a practical and descriptive way."
readme = { file = ".github/README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "LucasGonc", email = "lucasgoncsilva04@gmail.com" }]
maintainers = [{ name = "LucasGonc", email = "lucasgoncsilva04@gmail.com" }]


requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=23.1.0",
    "cryptography>=44.0.3",
    "dj-database-url>=2.3.0",
    "django>=5.2",
    "django-csp>=4.0",
    "django-simple-captcha>=0.6.2",
    "gunicorn>=23.0.0",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "django-debug-toolbar>=5.2.0",
    "django-extensions>=4.1",
    "locust>=2.36.1",
    "mosheh>=2.0.0",
    "mypy>=1.17.1",
    "ruff>=0.11.7",
    "taskipy>=1.14.1",
    "tblib>=3.1.0",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20250809",
]


[project.urls]
Documentation = "https://lucasgoncsilva.github.io/swarden/"
Repository = "https://github.com/lucasGoncSilva/swarden/"
Issues = "https://github.com/LucasGoncSilva/swarden/issues"
Changelog = "https://github.com/LucasGoncSilva/swarden/blob/main/.github/CHANGELOG.md"


[tool.taskipy.tasks]
init = "task start_postgres; task populatedb; task runserver"

runserver = "task lint; uv run manage.py runserver"
lint = "uv run ruff check; uv run ruff format; uv run mypy ."
createsuperuser = "uv run manage.py createsuperuser"
migrate = "uv run manage.py makemigrations; uv run manage.py migrate; uv run manage.py showmigrations"
populatedb = "task migrate; uv run manage.py populateuser; uv run manage.py populatesecret"
resetdb = "uv run manage.py reset_db; task clear_cache; task reset_migrations"
test = "uv run manage.py test"
testwithcoverage = "uv run manage.py testwithcoverage"
shell = "uv run manage.py shell"

# Internal Commands
clear_cache = "uv run manage.py clear_cache; uv run manage.py clean_pyc"
reset_migrations = "find . -path \"*/migrations/*.py\" -not -name \"__init__.py\" -delete && find . -path \"*/migrations/*.pyc\" -delete; echo \"Migrations deleted.\""
start_postgres = "docker run --name psql_swarden -p 5432:5432 -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres -e POSTGRES_DB=postgres -d postgres; sleep 10"


[tool.ruff]
exclude = [".env", "migrations", "SWARDEN/secret/month"]
fix = true

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = ["I", "E", "UP", "F"]
fixable = ["ALL"]
exclude = [".env", "migrations", "SWARDEN/secret/month"]

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.mypy]
disable_error_code = ["import-untyped", "no-redef"]
exclude = ["./migrations/*"]
